# Natrix

./: .clang-format  .clang-tidy  .gitignore  .hgignore  CMakeLists.txt  README.md  build.ini  build.py  build_debug.cmd  build_installer.cmd  conanfile.txt  setup_maker.nsi  setver.py
demo/: 1.sktx  sample_v1_sketch_file.skt  skt_to_xml.py
img/: elements.psd  readme.txt
src/geometry/: CMakeLists.txt  adorner.cpp  adorner.h  baseObject.cpp  baseObject.h  bendJoiner.cpp  bendJoiner.h  canvasGrip.cpp  canvasGrip.h  canvasRectangle.cpp  canvasRectangle.h  command.cpp  command.h  dispatcher.h  document.cpp  document.h  documentAutoSaver.cpp  documentAutoSaver.h  element.cpp  element.h  elementFactory.cpp  elementFactory.h  elementTypes.cpp  elementTypes.h  endCupJoiner.cpp  endCupJoiner.h  exclusiveFile.cpp  exclusiveFile.h  fourJoiner.cpp  fourJoiner.h  ghostAdorner.cpp  ghostAdorner.h  global.h  glueObject.cpp  glueObject.h  graphics.cpp  graphics.h  graphicsClipItem.cpp  graphicsClipItem.h  graphicsScene.cpp  (+130 more)
src/geometrytest/: CMakeLists.txt  main.cpp  test_command.h  test_elements.cpp  test_graphics.cpp  test_manipulator.cpp  test_point.cpp  test_scene.cpp  test_tmatrix.cpp  test_worldsystem.cpp
src/ui/: CMakeLists.txt  aboutDialog.cpp  aboutDialog.h  aboutDialog.ui  autoRestoreManagerDialog.cpp  autoRestoreManagerDialog.h  autoRestoreManagerDialog.ui  canvasPropertiesDialog.cpp  canvasPropertiesDialog.h  canvasPropertiesDialog.ui  checkPointsDialog.cpp  checkPointsDialog.h  checkPointsDialog.ui  exportDialog.cpp  exportDialog.h  exportDialog.ui  findDialog.cpp  findDialog.h  findDialog.ui  instrumentButton.cpp  instrumentButton.h  main.cpp  mainWindow.cpp  mainWindow.h  mainWindow.qrc  mainWindow.ui  newDialog.cpp  newDialog.h  newDialog.ui  propertyBarModel.cpp  propertyBarModel.h  propertyTreeWidget.cpp  propertyTreeWidget.h  propertyTreeWidget.ui  sceneWidget.cpp  sceneWidget.h  sceneWidgetDrawer.cpp  sceneWidgetDrawer.h  sheet_delegate.cpp  sheet_delegate_p.h  (+5 more)
